--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,6 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 
-
-
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -80,6 +78,14 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<!-- WebSocket -->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- AOP Alliance -->
 		<dependency>
 			<groupId>aopalliance</groupId>
@@ -107,8 +113,6 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
-
-
 
 		<!-- DBCP -->
 		<dependency>
@@ -311,7 +315,7 @@
 
 	<build>
 		<defaultGoal>install</defaultGoal>
-		<directory>${basedir}/target</directory>
+		<directory>${basedir}</directory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
